tests/suite/fail/generated/lexer/fail_unclosed_comment_2.ny
//~ ERROR unclosed block comment
fn main() {
    let x = 2 /* unclosed block 2
    print(x)
}
